# swarm_rippler

./: .gitignore  CNAME  LICENSE.txt  README.md  SECURITY.md  build.js  click_designer.html  generate-icons.sh  grid.txt  index.html  new_word.html  package-lock.json  package.json  security-check.sh  tailwind.config.js  tailwind.config.mjs  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: README.md  build-test.yml  release.yml
cordova/: config.xml  package-lock.json  package.json
cordova/www/: index.html  new_word.html
css/: accessibility.css  bottom_bar.css  colors-darkmode.css  colors.css  main.css  new_word.css  responsive.css  tooltip.css  tutorial.css
docs/: CNAME  index.html  site.webmanifest  sitemap.xml
docs/assets/: dev-tools-9zE5FD3-.js  dev-tools-B8MGEmSN.js  dev-tools-BR9kEGp4.js  dev-tools-BZF0kqs4.js  dev-tools-CCLl7-Tw.js  dev-tools-D4r071qq.js  dev-tools-DXIln_vP.js  dev-tools-Dq8GD3tT.js  index-27ZEKyzJ.js  index-6zXoP0vg.css  index-BLknAACb.css  index-BbJsJlyP.js  index-BsGV2AD4.css  index-C-oLBzYF.js  index-C1LioPOS.js  (+12 more)
electron/: index.html  index.js  main.js  package-lock.json  package.json  renderer.js  styles.css
js/: accessibility.js  main.js  new_word.js  tutorial.js
process_work/: artwork_that_started_this.HEIC  raw lo-fi clicks for prototype.aup3
prototypes/: ripple.html  sound_grid.html  sound_ripple.html  tooltip.html
public/: CNAME  robots.txt  site.webmanifest
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+27 files in other folders)
