[package]
name = "click-rippler"
version = "1.0.0"
description = "Interactive sound grid for creating and learning clicking sounds and glossolalia"
authors = ["Click Sound Rippler Project"]
license = "ISC"
repository = "https://github.com/ianrandmckenzie/clicking_glossolalia"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
